# MIT-Web-Development-Final-Year-Backend

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
.github/workflows/: deploy-ec2.yml  pylint.yml  test.yml
app/app/: settings.py
app/config/: asgi.py  settings.py  urls.py  wsgi.py
app/src/: admin.py  apps.py  dashboard.py  models.py  serializers.py  test_api.py  urls.py  views.py  viewsets.py
app/src/migrations/: 0001_initial.py  0002_assignment_description.py  0002_assignment_due_date.py  0003_alter_student_user_alter_teacher_user.py
app/templates/admin/: index.html
