[project]
name = "mit-web-development-final-year-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "swanpyaesone26",email = "joyboyop69@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)"
]

[tools.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
